Remove border to fix msgbox overflow

--- a/board/css/css.css
+++ b/board/css/css.css
@@ -86,9 +86,9 @@ button {
     max-width: 1600px;
     min-width: 200px;
     overflow: hidden;
-    border: 0.5px;
+    border: 0px;
     border-radius: 5px;
-    border-style: solid;
+    /* border-style: solid; */
     border-color: rgb(211, 211, 211);
     margin-left: auto;
     margin-right: auto;
